--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -1,8 +1,11 @@
 @import "tailwindcss";
 
 @layer components {
+    .search-bar-container {
+        @apply flex justify-center items-center w-full py-4; 
+    }
     .search-bar {
-        @apply flex items-center border border-black rounded-full px-4 py-2 bg-gray-200 text-black w-full;
+        @apply flex items-center border border-[#885437] rounded-full px-4 py-2 bg-gray-200 text-black w-6/10;
     }
 
     .search-icon {
