feat: Funcionalidad para filtrados

--- a/src/styles/ProductList.css
+++ b/src/styles/ProductList.css
@@ -48,30 +48,8 @@
     .buttons-container {
         @apply flex justify-between items-center mt-4 px-4;
     }
-}
 
-
-.boton {
-    margin-top: auto;
-    color: white;
-    padding: 0.5rem 1rem;
-    border-radius: 0.375rem;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-    border: none;
-    font-family: Georgia, Times, serif;
-
-
-    min-width: 100px;
-    max-width: 150px;
-    width: fit-content;
-}
-
-
-.boton--agregar {
-    background-color: #B69B82;
-}
-
-.boton--agregar:hover {
-    background-color: #57411d;
+    .button-add-to-cart {
+        @apply bg-[#885437] hover:underline text-black py-2 px-4 rounded-lg hover:bg-[#e0c3a4] hover:text-black transition-colors duration-200;
+    }
 }
