--- a/src/styles/FilterBy.css
+++ b/src/styles/FilterBy.css
@@ -2,7 +2,7 @@
 
 @layer components {
     .filter-by-container{
-        @apply flex justify-center items-center w-full py-4 font-[Georgia] text-[#885437];
+        @apply flex justify-center items-center w-full py-4 font-[Georgia] text-[#885437] relative;
     }
 
     .filter-by{
@@ -11,5 +11,58 @@
 
     .select {
         @apply flex-1 border-none outline-none w-full;
+    }
+
+    .filter-modal {
+        @apply absolute top-full left-0 max-w-full z-auto flex justify-start mt-[-15px] animate-[slideDown];
+    }
+
+    @keyframes slideDown {
+        from { opacity: 0; transform: translateY(-20px);}
+        to { opacity: 1; transform: translateY(0);}
+    }
+
+    .filter-modal-content {
+        @apply bg-[#fff] rounded-lg shadow-lg p-4 min-w-[250px];
+    }
+
+    .filter-modal-header {
+        @apply flex justify-between items-center;
+    }
+
+    .filter-modal-title {
+        @apply font-bold text-lg;
+    }
+
+    .close-filter-modal {
+        @apply bg-none font-bold border-none text-2xl cursor-pointer text-[#885437];
+    }
+
+    .filter-by-label {
+        @apply flex items-center gap-2;
+    }
+
+    .filter-icon-btn {
+        @apply bg-none border-none cursor-pointer p-0 flex items-center;
+    }
+
+    .filter-price-section {
+        @apply mt-4;
+    }
+
+    .filter-price-label {
+        @apply block mt-4 font-[500];
+    }
+
+    .filter-price-value {
+        @apply text-[#885437];
+    }
+
+    .filter-price-range {
+        @apply w-full;
+    }
+
+    .filter-price-marks {
+        @apply flex justify-between mt-0 text-[13px];
     }
 }
