--- a/src/styles/ProductList.css
+++ b/src/styles/ProductList.css
@@ -2,11 +2,11 @@
 
 @layer components {
     .search-order-container {
-        @apply flex justify-between items-center mb-4;
+        @apply flex flex-col gap-2 sm:flex-row sm:justify-between sm:items-center mb-4;
     }
 
     .search-order-container > * {
-        @apply w-1/2;
+        @apply w-full sm:w-1/3;
     }
 
     .product-list-container {
