--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -2,17 +2,17 @@
 
 @layer components {
     .search-bar-container {
-        @apply flex justify-center items-center w-full py-4; 
+        @apply flex justify-center items-center w-full py-4;
     }
     .search-bar {
-        @apply flex items-center border border-[#885437] rounded-full px-4 py-2 bg-gray-200 text-black w-6/10;
+        @apply flex items-center border border-[#885437] rounded-2xl px-4 py-2 bg-gray-200 text-black w-[90%] max-w-2xl min-w-0;
     }
 
     .search-icon {
         @apply mr-2;
     }
 
-    .input {
-        @apply flex-1 border-none outline-none w-full;
+    .search-bar input {
+        @apply flex-1 border-none outline-none w-full bg-transparent min-w-0;
     }
 }
