feat: Se agregan imagens de libros y diseños responsive

--- a/src/styles/Review.css
+++ b/src/styles/Review.css
@@ -6,7 +6,7 @@
     }
 
     .product-detail-top {
-        @apply flex flex-row gap-0 w-full;
+        @apply flex flex-col md:flex-row gap-4 w-full;
     }
 
     .product--review--image--container {
@@ -22,7 +22,7 @@
     }
 
     .product-detail-description {
-        @apply flex flex-1 basis-1/2 flex-col justify-center gap-0;
+        @apply flex flex-col justify-center w-full md:w-1/2;
     }
 
     .product-detail-bottom {
