--- a/src/styles/ProductList.css
+++ b/src/styles/ProductList.css
@@ -22,7 +22,7 @@
     }
 
     .product-image {
-        @apply w-full h-48 object-cover rounded-lg mb-4;
+        @apply w-full h-48 object-contain rounded-lg mb-4 bg-black/5 flex items-center justify-center;
     }
 
     .product-name {
